# nginx-cm

./: .gitignore  Cargo.toml  README.md  runguard.sh
docker/ngguard/: Dockerfile  build.sh
docker/nginx-cm/: Dockerfile  build.sh
examples/: ngguard-deployment.yaml  nginx-cm-statefulset.yaml
src/: main.rs  ngguard.rs  scheduled_tasks.rs
templates/: index.html.tera  nginx.conf.tera
