[package]
name = "nginx-cm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "nginx-cm"
path = "src/main.rs"

[[bin]]
name = "ngguard"
path = "src/ngguard.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
aws-config = "1.1"
aws-sdk-s3 = "1.14"
aws-credential-types = "1.1"
aws-smithy-types = "1.1"
urlencoding = "2.1"
hostname = "0.3"
regex = "1"
libc = "0.2.177"
procfs = "0.18.0"
clap = { version = "4.5", features = ["derive"] }
rust-embed = "8.0"
chrono = "0.4"
async-trait = "0.1.89"
